<resources>
    <string name="app_name">Car Scanner Pro</string>
    <string name="ecu_id_label">ECU ID: 7E8</string>

    <!-- Grid Items -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_live_data">Live data</string>
    <string name="menu_all_sensors">All sensors</string>
    <string name="menu_dtc">Diagnostic trouble codes</string>
    <string name="menu_freeze_frame">Freeze frame</string>
    <string name="menu_monitors">Noncontinuous Monitors</string>
    <string name="menu_acceleration">Acceleration tests</string>
    <string name="menu_emission">Emission tests</string>
    <string name="menu_terminal">Terminal</string>

    <!-- Details -->
    <string name="protocol_label">OBD2 protocol:</string>
    <string name="vin_label">VIN:</string>
    <string name="calibration_id_label">Calibration Id:</string>

    <!-- Status -->
    <string name="elm_connection">ELM connection:</string>
    <string name="ecu_connection">ECU connection:</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>

    <!-- Footer -->
    <string name="btn_disconnect">DISCONNECT</string>
    <string name="btn_connect">CONNECT</string>
    <string name="btn_connecting">CONNECTING&#8230;</string>

    <!-- Details Values -->
    <string name="mock_protocol">ISO 15765&#8211;4 CAN (11 bit ID, 500 kbaud)</string>
    <string name="mock_vin">U5YPC81ADEL481735</string>
    <string name="mock_calibration_id">ZL4YP2AS1F1C</string>
</resources>
